demo/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rancher-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: rancher-demo.cl.monach.us
    http:
      paths:
      - path: /
        backend:
          serviceName: rancher-demo
          servicePort: 80
